# fold

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  PLAN.md  PROJECT_STATUS.md  README.md  TEST_REPORT.md  check-server.ps1  docker-compose.example.yml  docker-compose.yml  plan.md  schema.sql  start-server.ps1  stop-server.ps1  test-mcp.ps1  update_existing_projects.sql  version.ps1
.cargo/: config.toml
.github/workflows/: docker-publish.yml  tests.yml
build-chat/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  PLAN.md  PROJECT_STATUS.md  ast-chunked-indexing.md  v2-full.md  v2.md
certs/: localhost-selfsigned.crt  localhost-selfsigned.key
crates/fold-chunker/: Cargo.toml
crates/fold-chunker/src/: lib.rs
crates/fold-core/: Cargo.toml  schema.sql
crates/fold-core/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/fold-core/src/api/: auth.rs  events.rs  groups.rs  mcp.rs  memories.rs  mod.rs  projects.rs  providers.rs  repositories.rs  search.rs  status.rs  users.rs  webhooks.rs
crates/fold-core/src/db/: attachments.rs  chunks.rs  git.rs  jobs.rs  links.rs  memories.rs  mod.rs  pool.rs  projects.rs  providers.rs  qdrant.rs  users.rs
crates/fold-core/src/middleware/: mod.rs  session_auth.rs  token_auth.rs
crates/fold-core/src/models/: mod.rs
crates/fold-core/src/services/: attachment_storage.rs  claudecode.rs  content_resolver.rs  embeddings_bridge.rs  event_broadcaster.rs  events.rs  fold_storage.rs  git.rs  git_local.rs  git_sync.rs  github.rs  graph.rs  index.rs  indexer.rs  job_worker.rs  linker.rs  llm.rs  markdown.rs  memory.rs  meta_storage.rs  metadata_sync.rs  mod.rs  permissions.rs  project.rs  sse_tracing_layer.rs
crates/fold-core/src/services/file_source/: github.rs  mod.rs  registry.rs
crates/fold-core/tests/: api_integration.rs  comprehensive_integration_tests.rs  db_integration.rs  file_chunking_tests.rs  file_source_integration.rs  full_endpoint_integration_tests.rs  integration_tests.rs  mcp_integration.rs  mcp_tools_security_tests.rs  memories_search_mcp_security_tests.rs  phase2_integration_tests.rs  provider_integration.rs  users_groups_apikeys_integration_tests.rs  v2_integration_tests.rs  webhook_integration.rs
crates/fold-core/tests/common/: mod.rs
crates/fold-embeddings/: Cargo.toml
crates/fold-embeddings/src/: lib.rs
crates/fold-git/: Cargo.toml
crates/fold-git/src/: lib.rs
crates/fold-llm/: Cargo.toml
crates/fold-llm/src/: lib.rs
crates/fold-models/: Cargo.toml
crates/fold-models/src/: chunk.rs  lib.rs  memory.rs  project.rs  provider.rs  repository.rs  session.rs  team.rs  user.rs
crates/fold-qdrant/: Cargo.toml
crates/fold-qdrant/src/: lib.rs
crates/fold-storage/: Cargo.toml
crates/fold-storage/src/: error.rs  lib.rs  slug.rs
data/: fold.db-shm  fold.db-wal
fold/0/0/: 00c68b85-ea1f-64ae-9eda-716740c925e4.md
fold/0/1/: 012f2241-198e-07ed-6936-4e13ed53d4ec.md
fold/0/3/: 030456bd-3358-20ca-9b17-ba403c59f217.md
fold/0/a/: 0a6fbd2f-5cbf-ff22-8945-bace5cb96acb.md
fold/0/b/: 0b88144d-b277-9d34-95f9-50c5b3e210df.md
fold/1/6/: 161d2374-fee5-ed82-a8d1-5fe7c1532351.md  16d9f830-efc9-fb3c-dd89-df228b7e94e6.md  16e8d2a3-1a7a-ab7c-123d-f5b802f0394f.md
fold/1/d/: 1d5ece51-9997-ffed-aab1-59bd84a966e1.md
fold/1/e/: 1e23efb6-8e0d-4747-69fa-0e48cb91905a.md
fold/2/0/: 2060c1f7-a3f8-0f1c-d3d2-058fc33d1864.md
fold/2/1/: 2107f245-6a42-e289-5e5f-e7818e7a12ff.md
fold/2/2/: 225e0ac7-29bf-ef40-38f8-e2fe780ea673.md
fold/2/3/: 23039647-9a25-1aa2-8f57-3c3cc8f17bfb.md  23f8ebc9-c03e-0650-a7dd-51ed83518b66.md
fold/2/4/: 247046bc-eddd-248a-a1f6-273c2278058e.md  249c87bc-4641-195f-7c46-dccd94e8cf44.md
fold/2/b/: 2bfd040d-d5d5-fb45-bfcc-1f521ec0fedf.md
fold/2/e/: 2ee09ddc-29c3-3f38-5512-8cb9e1e304b7.md
fold/3/1/: 31692a63-2687-78c7-37c5-00d72aaa1535.md
fold/3/3/: 33f2c0c7-ca83-d27c-bbad-18f09ee263f8.md
fold/3/5/: 35ebfebf-02b7-3a76-de73-6734dc80b042.md
fold/3/6/: 36c28776-a8c2-f81f-211c-d19d78931708.md
migrations/: 001_initial.sql  002_local_path.sql  002_repositories.sql  003_content_storage.sql  003_jobs.sql  004_schema_fixes.sql  005_file_sources.sql  006_job_queue_enhancements.sql
skills/deploying-fold/: SKILL.md
skills/managing-fold/: SKILL.md
skills/using-fold/: SKILL.md
src/: config.rs  error.rs  main.rs  state.rs
src/api/: attachments.rs  auth.rs  graph.rs  groups.rs  mcp.rs  memories.rs  mod.rs  projects.rs  providers.rs  repositories.rs  search.rs  sessions.rs  status.rs  team.rs  users.rs  webhooks.rs
src/db/: attachments.rs  chunks.rs  groups.rs  jobs.rs  links.rs  memories.rs  mod.rs  pool.rs  projects.rs  providers.rs  qdrant.rs  repositories.rs  sessions.rs  users.rs
src/middleware/: mod.rs  project_auth.rs  token_auth.rs
src/models/: job.rs  links.rs  memory.rs  mod.rs  project.rs  provider.rs  repository.rs  session.rs  team.rs  user.rs
src/services/: attachment_storage.rs  auth.rs  chunker.rs  content_resolver.rs  decay.rs  embeddings.rs  fold_storage.rs  git.rs  git_local.rs  git_sync.rs  github.rs  gitlab.rs  graph.rs  index.rs  indexer.rs  job_worker.rs  linker.rs  llm.rs  markdown.rs  memory.rs  meta_storage.rs  metadata_sync.rs  mod.rs  permissions.rs  project.rs  qdrant.rs
tests/: MEMORY_SOURCE_TESTS_README.md  api_integration.rs  comprehensive_integration_tests.rs  db_integration.rs  endpoint_security_tests.rs  file_chunking_tests.rs  file_source_integration.rs  full_endpoint_integration_tests.rs  integration_tests.rs  mcp_integration.rs  mcp_tools_security_tests.rs  memories_search_mcp_security_tests.rs  memory_source_integration_tests.rs  memory_source_tracking_tests.rs  phase2_integration_tests.rs  phase3_integration_tests.rs  project_listing_security_tests.rs  provider_integration.rs  search_results_security_tests.rs  users_groups_apikeys_integration_tests.rs  v2_http_integration_tests.rs  v2_integration_tests.rs  webhook_integration.rs
tests/common/: mod.rs
tools/: README.md  create-admin.ps1  create-admin.sh  verify-token.ps1
(+92 files in other folders)
