[workspace]
resolver = "2"
members = [
    "crates/fold-chunker",
    "crates/fold-core",
    "crates/fold-embeddings",
    "crates/fold-git",
    "crates/fold-llm",
    "crates/fold-models",
    "crates/fold-qdrant",
    "crates/fold-storage",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Generation-One/fold"

[workspace.dependencies]
# Will be populated as we extract crates

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
incremental = true
# Line tables only - faster builds, still debuggable
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.test]
incremental = true
debug = 1
