[package]
name = "fold-chunker"
version.workspace = true
edition.workspace = true
description = "Semantic code and text chunking using tree-sitter"
license = "MIT"
authors = ["Francis West <frank@generation.one>"]
repository = "https://github.com/Generation-One/fold"

[dependencies]
# AST parsing for code chunking
tree-sitter = "0.24"

# Systems languages
tree-sitter-rust = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-zig = "1.1"

# JVM languages
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.24"

# .NET languages
tree-sitter-c-sharp = "0.23"

# Scripting languages
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.4"
tree-sitter-elixir = "0.3"
tree-sitter-bash = "0.25"

# Web languages
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"

# Mobile languages
tree-sitter-swift = "0.7"

# Data/config languages
tree-sitter-go = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.3"

# Regex for text chunking
regex = "1.10"

# Serialization (for potential future use)
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
