[package]
name = "fold-embeddings"
version.workspace = true
edition.workspace = true
description = "Embedding service with multi-provider fallback for Fold"
license = "MIT"
authors = ["Francis West <frank@generation.one>"]
repository = "https://github.com/Generation-One/fold"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
